fix sig alignment

--- a/src/furo/assets/styles/content/_api.sass
+++ b/src/furo/assets/styles/content/_api.sass
@@ -55,16 +55,6 @@ dl.exception
       color: var(--color-api-keyword)
       padding-right: 0.25rem
 
-.sig-name
-  font-weight: bold
-  color: var(--color-api-name)
-.sig-prename
-  color: var(--color-api-pre-name)
-.sig-paren
-  color: var(--color-api-paren)
-.sig-param
-  font-style: normal
-
 .versionmodified
   font-style: italic
 div.versionadded, div.versionchanged, div.deprecated
