--- a/src/furo/assets/styles/divio/_code.scss
+++ b/src/furo/assets/styles/divio/_code.scss
@@ -492,3 +492,9 @@ div[class^="highlight"] pre {
     background-color: #eaf2f5;
   }
 }
+
+.sig-name,
+.sig-prename {
+  padding: 0;
+  border: none;
+}
